Fixed alignment of #langPopover

--- a/flussbad-theme/src/main/webapp/css/custom.css
+++ b/flussbad-theme/src/main/webapp/css/custom.css
@@ -762,7 +762,7 @@ input {
         }
         
         &.bottom {
-        
+                
             .arrow {
                border: none !important;
                
@@ -780,6 +780,8 @@ input {
     
     .popover-lang {
         position: fixed;
+        width: 120px;
+        text-align: center;
     }
 
 
